5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1643_2447.log
== TEST (2019-04-10 19:27:32) 
-- CODE:
a= float(input("qual o preço? ")
b= float(input("qual o pagamento ?")
ft= round(a-b,2) 
tf= round(b-a,2)
if(a>b):
	print("Falta", ft)
else:
	print("Troco de", tf)

-- ERROR:
File "XXXX", line 2
    b= float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:27:42) 
-- CODE:
a= float(input("qual o preco? ")
b= float(input("qual o pagamento ?")
ft= round(a-b,2) 
tf= round(b-a,2)
if(a>b):
	print("Falta", ft)
else:
	print("Troco de", tf)

-- ERROR:
File "XXXX", line 2
    b= float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:27:50) 
-- CODE:
a= float(input("qual o preco? "))
b= float(input("qual o pagamento ?"))
ft= round(a-b,2) 
tf= round(b-a,2)
if(a>b):
	print("Falta", ft)
else:
	print("Troco de", tf)

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:28:05) 
-- CODE:
a= float(input("qual o preco? "))
b= float(input("qual o pagamento ?"))
ft= round(a-b,2) 
tf= round(b-a,2)
if(a>b):
	print("Falta", ft)
else:
	print("Troco de", tf)

-- EXECUTION TIME:
0.14454
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
